--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         <button class="group relative">
           <img src="assets/img/icons8-carrito-de-compras-50.png" alt="Carrito" class="w-6 h-6 group-hover:scale-110 transition-transform duration-300">
         </button>
+        <span id="userGreeting" class="hidden text-sm font-semibold text-[#275c74]"></span>
         <button id="inicio_sesion" class="group">
-          <img data-modal-target="authentication-modal" data-modal-toggle="authentication-modal" src="assets/img/icons8-usuario-24.png" alt="Usuario" class="w-6 h-6 group-hover:opacity-70 transition-opacity duration-300">
-        </button>
+            <img src="assets/img/icons8-usuario-24.png" alt="Usuario" class="w-6 h-6 group-hover:opacity-70 transition-opacity duration-300">
+            </button>
         <button id="btnAbrir" class="lg:hidden">
           <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 50 50">
             <path d="M3 9a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3zm0 15a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3zm0 15a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3z"/>
@@ -66,119 +67,121 @@
     </div>
 </header>
 
-    <!-- MENÚ USUARIO SIN SESIÓN -->
-    <div id="userMenuNoSesion"
-         class="hidden fixed drop-shadow-md drop-shadow-black/20 absolute right-3 top-16 z-40 w-72 bg-white rounded-xl shadow-2xl border border-gray-100 overflow-hidden transform transition-all duration-200 ease-out translate-x-4 opacity-0 mt-4">
-        <div class="flex items-center gap-3 px-4 py-3 bg-gradient-to-r from-[#0e4448] to-[#12b1be]">
-            <div>
-                <p class="text-white font-semibold text-sm font-family-base">Bienvenido</p>
-                <p class="text-white/80 text-xs">Accede o crea una cuenta</p>
-            </div>
+    <div
+    id="loginModal"
+    tabindex="-1"
+    aria-hidden="true"
+    class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-[60] w-full md:inset-0 h-full max-h-full transform transition-all duration-300 ease-out opacity-0 scale-95"
+    >
+  <div class="absolute top-20 right-8 p-4 w-full max-w-md max-h-full">
+    <div class="relative rounded-lg shadow-sm bg-[#0e4448]">
+      <div class="flex items-center justify-between p-4 md:p-5 border-b border-gray-200 rounded-t">
+        <div class="flex items-center gap-2">
+          <img src="assets/img/logo.png" class="w-10 h-10" alt=""> <h3 class="text-xl font-semibold text-white font-family-base">Inicio de sesión</h3>
         </div>
-        <div class="py-2">
-            <button
-                id="inicio_sesion"
-                class="w-full text-left px-4 py-2.5 text-sm font-medium text-slate-700 hover:bg-[#98bfc2]">
-                Iniciar sesión
-            </button>
-            <a href="registro.html"
-               class="block px-4 py-2.5 text-sm font-medium text-slate-700 hover:text-slate-700 hover:bg-[#98bfc2]">
-                Registrarse
-            </a>
-        </div>
+        <button
+          id="closeLoginModal"
+          type="button"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 flex justify-center items-center"
+          data-modal-hide="authentication-modal"
+        >
+          <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M1 1l6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+          <span class="sr-only">Cerrar</span>
+        </button>
+      </div>
+
+      <div class="p-4 md:p-5">
+        <form id="loginForm" class="space-y-4" action="#">
+          <div>
+            <label for="email" class="block mb-2 text-sm font-medium text-white">Email</label>
+            <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="momo@gmail.com"
+            required
+            class="bg-white/10 border-white/20 text-white placeholder-gray-400 text-sm rounded-lg focus:ring-[#12b1be] focus:border-[#12b1be] block w-full p-2.5"
+            />
+          </div>
+          <div>
+            <label for="password" class="block mb-2 text-sm font-medium text-white">Contraseña</label>
+            <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="••••••••"
+            required
+            class="bg-white/10 border-white/20 text-white placeholder-gray-400 text-sm rounded-lg focus:ring-[#12b1be] focus:border-[#12b1be] block w-full p-2.5"
+            />
+          </div>
+
+          <div class="flex justify-between items-center">
+            <label class="flex items-center text-sm text-white">
+              <input
+                id="remember"
+                type="checkbox"
+                class="w-4 h-4 border border-gray-300 rounded-sm focus:ring-[#12b1be]"
+              />
+              <span class="ml-2">Recordarme</span>
+            </label>
+            <a href="#" class="text-sm text-[#12b1be] hover:underline">Olvidé mi contraseña</a>
+          </div>
+          <p id="loginError" class="hidden text-sm text-red-300"></p>
+          <button
+            type="submit"
+            class="w-full text-white bg-[#1e6e75] hover:bg-[#12b1be] focus:ring-4 focus:outline-none focus:ring-[#12b1be]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center transition"
+          >
+            Iniciar sesión
+          </button>
+
+          <p class="text-sm font-medium text-gray-300 text-center">
+            ¿No eres usuario?
+            <a href="#" class="text-[#12b1be] hover:underline">Crear tu cuenta</a>
+          </p>
+        </form>
+      </div>
     </div>
-
-    <!-- MENÚ USUARIO CON SESIÓN -->
-    <div id="userMenuSesion"
-         class="hidden fixed drop-shadow-md drop-shadow-black/80 absolute right-3 top-16 z-40 w-72 bg-white rounded-xl shadow-2xl border border-gray-100 overflow-hidden transform transition-all duration-200 ease-out translate-x-4 opacity-0 mt-4">
-        <div class="flex items-center gap-3 px-4 py-3 bg-gradient-to-r from-[#0e4448] to-[#12b1be]">
-            <div class="w-9 h-9 rounded-full bg-white flex items-center justify-center text-[#0e4448] font-semibold">
-                <span>B</span>
-            </div>
-            <div>
-                <p class="text-white font-semibold text-sm font-family-base">
-                    Hola, <span id="nombreUsuario">Baltasar</span>
-                </p>
-                <p class="text-white/80 text-xs">Gestioná tu cuenta</p>
-            </div>
+  </div>
+</div>
+<div id="userMenuSesion" class="hidden fixed top-28 right-8 p-4 w-full max-w-md max-h-full transform transition-all duration-300 ease-out opacity-0 scale-95 z-[60]">
+  <div class="relative rounded-lg shadow-sm bg-[#0e4448]">
+    <div class="flex items-center justify-between p-4 md:p-5 border-b border-gray-200 rounded-t">
+      <div class="flex items-center gap-3">
+        <div class="w-10 h-10 rounded-full bg-white flex items-center justify-center text-[#0e4448] font-semibold text-xl">
+          <span id="userAvatar">U</span>
         </div>
-
-        <div class="py-2">
-            <a href="perfil.html">
-            <button id="linkPerfil"
-                    class="w-full text-left px-4 py-2.5 text-sm text-slate-700 hover:bg-[#98bfc2]">
-                Perfil
-            </button>
-            </a>
-            <button id="misCompras"
-                    class="w-full text-left px-4 py-2.5 text-sm text-slate-700 hover:bg-[#98bfc2]">
-                Mis compras
-            </button>
-            <button id="favoritos"
-                    class="w-full text-left px-4 py-2.5 text-sm text-slate-700 hover:bg-[#98bfc2]">
-                Favoritos
-            </button>
-            <button id="configuracion"
-                    class="w-full text-left px-4 py-2.5 text-sm text-slate-700 hover:bg-[#98bfc2]">
-                Configuración
-            </button>
-            <div class="border-t border-slate-100 pt-1">
-                <button id="cerrarSesion"
-                        class="w-full text-left px-4 py-2.5 text-sm text-red-500 hover:bg-[#a89090]">
-                    Cerrar sesión
-                </button>
-            </div>
+        <div>
+          <p class="text-white font-semibold text-lg font-family-base">
+            Hola, <span id="nombreUsuario">Usuario</span>
+          </p>
+          <p class="text-white/80 text-sm">Gestioná tu cuenta</p>
         </div>
+      </div>
+      <button id="closeUserMenuBtn" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 flex justify-center items-center">
+        <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1l6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+        </svg>
+        <span class="sr-only">Cerrar</span>
+      </button>
     </div>
-
-    <!-- MODAL LOGIN -->
-    <div id="loginModal" class="fixed inset-0 flex items-center justify-center bg-[rgba(0,0,0,0.6)] hidden z-50">
-        <div class="relative isolate bg-[#0e4448] px-8 py-10 sm:py-12 rounded-2xl shadow-2xl w-[22rem] sm:w-[28rem] transform transition-all duration-300 scale-100">
-            <button id="closeLoginModal" class="absolute top-3 right-3 text-gray-400 hover:text-white text-xl cursor-pointer">
-                ✕
-            </button>
-
-            <div class="text-center mb-6">
-                <h2 class="text-3xl font-semibold tracking-tight text-white font-family-base">Iniciar sesión</h2>
-                <p class="mt-2 text-base text-gray-400 font-family-base">Accede a tu cuenta para continuar</p>
-            </div>
-
-            <form id="loginForm" class="space-y-5">
-                <div>
-                    <label class="block text-sm font-semibold text-white mb-1">Correo electrónico</label>
-                    <input 
-                        id="loginEmail"
-                        name="email"
-                        type="email" 
-                        required 
-                        placeholder="tuemail@ejemplo.com"
-                        class="block w-full rounded-md bg-white/10 px-3.5 py-2 text-white placeholder-gray-400 outline-1 outline-white/10 focus:outline-2 focus:outline-[#12b1be] transition">
-                </div>
-
-                <div>
-                    <label class="block text-sm font-semibold text-white mb-1">Contraseña</label>
-                    <input 
-                        id="loginPassword"
-                        name="password"
-                        type="password" 
-                        required 
-                        placeholder="••••••••"
-                        class="block w-full rounded-md bg-white/10 px-3.5 py-2 text-white placeholder-gray-400 outline-1 outline-white/10 focus:outline-2 focus:outline-[#12b1be] transition">
-                    <div class="text-right mt-2">
-                        <a href="#" class="text-sm text-[#12b1be] hover:underline">¿Olvidaste tu contraseña?</a>
-                    </div>
-                </div>
-
-                <p id="loginError" class="hidden text-sm text-red-300"></p>
-
-                <button 
-                    type="submit"
-                    class="w-full mt-3 rounded-md bg-[#1e6e75] px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-xs hover:bg-[#12b1be] focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#1e6e75] transition">
-                    Iniciar sesion
-                </button>
-            </form>
-        </div>
+    <div class="p-4 md:p-5">
+      <ul class="space-y-2">
+        <li><a id="linkPerfil" href="perfil.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Mi Perfil</a></li>
+        <li><a href="misCompras.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Mis Compras</a></li>
+        <li><a href="metodosPagos.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Métodos de Pago</a></li>
+        <li><a id="cerrarSesion" href="index.html" class="block text-red-500 hover:bg-white/10 p-2 rounded-lg">Cerrar sesión</a></li>
+        </ul>
     </div>
+  </div>
+</div>
 
     <!-- MENÚ OFFCANVAS MÓVIL -->
     <div id="menuOffcanvas" class="shadow-lg shadow-black/30 fixed top-0 right-0 h-full w-3/4 max-w-sm bg-[#275c74] text-white transform translate-x-full transition-transform duration-500 ease-in-out z-[999] flex flex-col justify-between">
@@ -306,7 +309,7 @@
                                 <p class="text-sm text-gray-500">Lun-Sáb 8:00 - 22:00</p>
                             </div>
                         </div>
-                        <div class="flex items-center gap-3">
+                        <div class="flex items-start gap-3">
                             <div class="w-10 h-10 flex justify-center items-center bg-[#12B1BE33] rounded-md">
                                 <img src="assets/img/icons8-me-gusta-24(1).png" alt="Ícono beneficio" class="w-6 h-6">
                             </div>
