--- a/paginas/medicamentos.html
+++ b/paginas/medicamentos.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medicamentos - Farmacia Luz</title>
-
+  <title>Medicamentos</title>
+  <link rel="icon" type="image/png" href="../assets/img/logo.png" />
   <link rel="stylesheet" href="../assets/output.css?v=3" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
@@ -62,8 +62,9 @@
         <button class="group relative">
           <img src="../assets/img/icons8-carrito-de-compras-50.png" alt="Carrito" class="w-6 h-6 group-hover:scale-110 transition-transform duration-300">
         </button>
+        <span id="userGreeting" class="hidden text-sm font-semibold text-[#275c74]"></span>
         <button id="inicio_sesion" class="group">
-          <img data-modal-target="authentication-modal" data-modal-toggle="authentication-modal" src="../assets/img/icons8-usuario-24.png" alt="Usuario" class="w-6 h-6 group-hover:opacity-70 transition-opacity duration-300">
+          <img src="../assets/img/icons8-usuario-24.png" alt="Usuario" class="w-6 h-6 group-hover:opacity-70 transition-opacity duration-300">
         </button>
         <button id="btnAbrir" class="lg:hidden">
           <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 50 50">
@@ -73,6 +74,122 @@
       </div>
     </div>
 </header>
+
+<div
+  id="loginModal"
+  tabindex="-1"
+  aria-hidden="true"
+  class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-[60] w-full md:inset-0 h-full max-h-full transform transition-all duration-300 ease-out opacity-0 scale-95"
+>
+  <div class="absolute top-20 right-8 p-4 w-full max-w-md max-h-full">
+    <div class="relative rounded-lg shadow-sm bg-[#0e4448]">
+      <div class="flex items-center justify-between p-4 md:p-5 border-b border-gray-200 rounded-t">
+        <div class="flex items-center gap-2">
+          <img src="../assets/img/logo.png" class="w-10 h-10" alt=""> <h3 class="text-xl font-semibold text-white font-family-base">Inicio de sesión</h3>
+        </div>
+        <button
+          id="closeLoginModal"
+          type="button"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 flex justify-center items-center"
+          data-modal-hide="authentication-modal"
+        >
+          <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M1 1l6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+          <span class="sr-only">Cerrar</span>
+        </button>
+      </div>
+
+      <div class="p-4 md:p-5">
+        <form id="loginForm" class="space-y-4" action="#">
+          <div>
+            <label for="email" class="block mb-2 text-sm font-medium text-white">Email</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="momo@gmail.com"
+              required
+              class="bg-white/10 border-white/20 text-white placeholder-gray-400 text-sm rounded-lg focus:ring-[#12b1be] focus:border-[#12b1be] block w-full p-2.5"
+            />
+          </div>
+          <div>
+            <label for="password" class="block mb-2 text-sm font-medium text-white">Contraseña</label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="••••••••"
+              required
+              class="bg-white/10 border-white/20 text-white placeholder-gray-400 text-sm rounded-lg focus:ring-[#12b1be] focus:border-[#12b1be] block w-full p-2.5"
+            />
+          </div>
+
+          <div class="flex justify-between items-center">
+            <label class="flex items-center text-sm text-white">
+              <input
+                id="remember"
+                type="checkbox"
+                class="w-4 h-4 border border-gray-300 rounded-sm focus:ring-[#12b1be]"
+              />
+              <span class="ml-2">Recordarme</span>
+            </label>
+            <a href="#" class="text-sm text-[#12b1be] hover:underline">Olvidé mi contraseña</a>
+          </div>
+          <p id="loginError" class="hidden text-sm text-red-300"></p>
+          <button
+            type="submit"
+            class="w-full text-white bg-[#1e6e75] hover:bg-[#12b1be] focus:ring-4 focus:outline-none focus:ring-[#12b1be]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center transition"
+          >
+            Iniciar sesión
+          </button>
+
+          <p class="text-sm font-medium text-gray-300 text-center">
+            ¿No eres usuario?
+            <a href="#" class="text-[#12b1be] hover:underline">Crear tu cuenta</a>
+          </p>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="userMenuSesion" class="hidden fixed top-28 right-8 p-4 w-full max-w-md max-h-full transform transition-all duration-300 ease-out opacity-0 scale-95 z-[60]">
+  <div class="relative rounded-lg shadow-sm bg-[#0e4448]">
+    <div class="flex items-center justify-between p-4 md:p-5 border-b border-gray-200 rounded-t">
+      <div class="flex items-center gap-3">
+        <div class="w-10 h-10 rounded-full bg-white flex items-center justify-center text-[#0e4448] font-semibold text-xl">
+          <span id="userAvatar">U</span>
+        </div>
+        <div>
+          <p class="text-white font-semibold text-lg font-family-base">
+            Hola, <span id="nombreUsuario">Usuario</span>
+          </p>
+          <p class="text-white/80 text-sm">Gestioná tu cuenta</p>
+        </div>
+      </div>
+      <button id="closeUserMenuBtn" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 flex justify-center items-center">
+        <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1l6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+        </svg>
+        <span class="sr-only">Cerrar</span>
+      </button>
+    </div>
+    <div class="p-4 md:p-5">
+      <ul class="space-y-2">
+        <li><a id="linkPerfil" href="../perfil.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Mi Perfil</a></li>
+        <li><a href="../misCompras.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Mis Compras</a></li>
+        <li><a href="../metodosPagos.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Métodos de Pago</a></li>
+        <li><a id="cerrarSesion" href="../index.html" class="block text-red-500 hover:bg-white/10 p-2 rounded-lg">Cerrar sesión</a></li>
+        </ul>
+    </div>
+  </div>
+</div>
 
 <!-- MENÚ OFFCANVAS -->
 <div id="menuOffcanvas"
@@ -205,7 +322,8 @@ document.getElementById("btnCerrar").onclick = () =>
 </script>
 
 <script src="../assets/js/productos.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+<script src="../index.js"></script>
 
 </body>
 </html>
