--- a/perfil.html
+++ b/perfil.html
@@ -3,67 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmacia</title>
+    <title>Perfil</title>
     <link rel="icon" type="image/png" href="assets/img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/output.css">
+    <style>
+        .font-family-base {
+            font-family: inherit !important;
+        }
+    </style>
 </head>
 <body class="overflow-x-hidden">
     
     <!-- HEADER -->
     <header class="fixed top-0 left-0 w-full bg-white/90 backdrop-blur-md shadow-md z-50">
-        <div class="flex justify-between items-center py-3 px-8 max-w-7xl mx-auto">
-            <a href="index.html" class="flex items-center gap-2">
-                <img src="assets/img/logo.png" alt="Logo" class="w-14 h-14">
-                <span class="hidden sm:inline font-semibold text-[#275c74] tracking-wide text-lg">Farmacia del Momo</span>
-            </a>
-
-            <nav class="hidden lg:flex gap-8 text-base font-medium text-[#275c74]">
-                <a href="index.html" class="relative group transition font-family-base">Inicio
-                    <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
-                </a>
-                <a href="#" class="relative group transition font-family-base">Perfumes
-                    <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
-                </a>
-                <a href="#" class="relative group transition font-family-base">Cuidado Personal
-                    <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
-                </a>
-                <a href="#" class="relative group transition font-family-base">Dermocosmética
-                    <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
-                </a>
-                <a href="#" class="relative group transition font-family-base">Medicamentos
-                    <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
-                </a>
-                <a href="#" class="relative group transition font-family-base">Bienestar
-                    <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
-                </a>
-                <a href="#" class="relative group transition font-family-base">Bebés
-                    <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
-                </a>
-            </nav>
-
-            <div class="flex items-center gap-5">
-                <!-- Botón carrito -->
-                <button id="cartBtn" class="group relative">
-                    <img src="assets/img/icons8-carrito-de-compras-50.png" alt="Carrito" class="w-6 h-6 group-hover:scale-110 transition-transform duration-300">
-                </button>
-
-                <!-- Botón usuario -->
-                <button id="perfilBtn" class="group">
-                    <img src="assets/img/icons8-usuario-24.png" alt="Usuario" class="w-6 h-6 group-hover:opacity-70 transition-opacity duration-300">
-                </button>
-
-                <!-- Botón menú móvil -->
-                <button id="btnAbrir" class="lg:hidden">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 50 50">
-                        <path d="M3 9a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3zm0 15a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3zm0 15a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3z"/>
-                    </svg>
-                </button>
-            </div>
-        </div>
-    </header>
+    <div class="flex justify-between items-center py-3 px-8 max-w-7xl mx-auto">
+      <a href="index.html" class="flex items-center gap-2">
+        <img src="assets/img/logo.png" alt="Logo" class="w-14 h-14">
+        <span class="hidden sm:inline font-semibold text-[#275c74] tracking-wide text-lg">Farmacia Luz</span>
+      </a>
+      <nav class="hidden lg:flex gap-8 text-base font-medium text-[#275c74]">
+        <a href="index.html" class="relative group transition text-[#12b1be] font-semibold">
+          Inicio
+          <span class="absolute left-0 -bottom-1 w-full h-[2px] bg-[#12b1be]"></span>
+        </a>
+        <a href="./paginas/perfumes.html" class="relative group transition">
+          Perfumes
+          <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
+        </a>
+        <a href="./paginas/cuidado-personal.html" class="relative group transition">
+          Cuidado Personal
+          <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
+        </a>
+        <a href="./paginas/dermocomestica.html" class="relative group transition">
+          Dermocosmética
+          <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
+        </a>
+        <a href="./paginas/medicamentos.html" class="relative group transition">
+          Medicamentos
+          <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
+        </a>
+        <a href="./paginas/bebes.html" class="relative group transition">
+          Bebés
+          <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
+        </a>
+      </nav>
+      <div class="flex items-center gap-5">
+        <button class="group relative">
+          <img src="assets/img/icons8-carrito-de-compras-50.png" alt="Carrito" class="w-6 h-6 group-hover:scale-110 transition-transform duration-300">
+        </button>
+        <span id="userGreeting" class="hidden text-sm font-semibold text-[#275c74]"></span>
+        <button id="inicio_sesion" class="group">
+            <img src="assets/img/icons8-usuario-24.png" alt="Usuario" class="w-6 h-6 group-hover:opacity-70 transition-opacity duration-300">
+            </button>
+        <button id="btnAbrir" class="lg:hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 50 50">
+            <path d="M3 9a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3zm0 15a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3zm0 15a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3z"/>
+          </svg>
+        </button>
+      </div>
+    </div>
+</header>
 
     <!-- MENÚ USUARIO SIN SESIÓN -->
     <div id="userMenuNoSesion"
@@ -88,47 +90,37 @@
     </div>
 
     <!-- MENÚ USUARIO CON SESIÓN -->
-    <div id="userMenuSesion"
-         class="hidden fixed drop-shadow-md drop-shadow-black/80 absolute right-3 top-16 z-40 w-72 bg-white rounded-xl shadow-2xl border border-gray-100 overflow-hidden transform transition-all duration-200 ease-out translate-x-4 opacity-0 mt-4">
-        <div class="flex items-center gap-3 px-4 py-3 bg-gradient-to-r from-[#0e4448] to-[#12b1be]">
-            <div class="w-9 h-9 rounded-full bg-white flex items-center justify-center text-[#0e4448] font-semibold">
-                <span>B</span>
-            </div>
-            <div>
-                <p class="text-white font-semibold text-sm font-family-base">
-                    Hola, <span id="nombreUsuario">Usuario</span>
-                </p>
-                <p class="text-white/80 text-xs">Gestioná tu cuenta</p>
-            </div>
+    <div id="userMenuSesion" class="hidden fixed top-28 right-8 p-4 w-full max-w-md max-h-full transform transition-all duration-300 ease-out opacity-0 scale-95 z-[60]">
+  <div class="relative rounded-lg shadow-sm bg-[#0e4448]">
+    <div class="flex items-center justify-between p-4 md:p-5 border-b border-gray-200 rounded-t">
+      <div class="flex items-center gap-3">
+        <div class="w-10 h-10 rounded-full bg-white flex items-center justify-center text-[#0e4448] font-semibold text-xl">
+          <span id="userAvatar">U</span>
         </div>
-
-        <div class="py-2">
-            <a href="perfil.html">
-            <button id="linkPerfil"
-                    class="w-full text-left px-4 py-2.5 text-sm text-slate-700 hover:bg-[#98bfc2]">
-                Perfil
-            </button>
-            </a>
-            <button id="misCompras"
-                    class="w-full text-left px-4 py-2.5 text-sm text-slate-700 hover:bg-[#98bfc2]">
-                Mis compras
-            </button>
-            <button id="favoritos"
-                    class="w-full text-left px-4 py-2.5 text-sm text-slate-700 hover:bg-[#98bfc2]">
-                Favoritos
-            </button>
-            <button id="configuracion"
-                    class="w-full text-left px-4 py-2.5 text-sm text-slate-700 hover:bg-[#98bfc2]">
-                Configuración
-            </button>
-            <div class="border-t border-slate-100 pt-1">
-                <button id="cerrarSesion"
-                        class="w-full text-left px-4 py-2.5 text-sm text-red-500 hover:bg-[#a89090]">
-                    Cerrar sesión
-                </button>
-            </div>
+        <div>
+          <p class="text-white font-semibold text-lg font-family-base">
+            Hola, <span id="nombreUsuario">Usuario</span>
+          </p>
+          <p class="text-white/80 text-sm">Gestioná tu cuenta</p>
         </div>
+      </div>
+      <button id="closeUserMenuBtn" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 flex justify-center items-center">
+        <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1l6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+        </svg>
+        <span class="sr-only">Cerrar</span>
+      </button>
     </div>
+    <div class="p-4 md:p-5">
+      <ul class="space-y-2">
+        <li><a id="linkPerfil" href="perfil.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Mi Perfil</a></li>
+        <li><a href="misCompras.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Mis Compras</a></li>
+        <li><a href="metodosPagos.html" class="block text-white hover:bg-white/10 p-2 rounded-lg">Métodos de Pago</a></li>
+        <li><a id="cerrarSesion" href="index.html" class="block text-red-500 hover:bg-white/10 p-2 rounded-lg">Cerrar sesión</a></li>
+        </ul>
+    </div>
+  </div>
+</div>
 
     <!-- MODAL LOGIN -->
     <div id="loginModal" class="fixed inset-0 flex items-center justify-center bg-[rgba(0,0,0,0.6)] hidden z-50">
@@ -260,36 +252,19 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
                                 </svg>
-                                <span class="font-medium">Mis compras</span>
+                                <span class="font-medium">Mis Compras</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg transition">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.593 3.322c1.1.128 1.907 1.077 1.907 2.185V21L12 17.25 4.5 21V5.507c0-1.108.806-2.057 1.907-2.185a48.507 48.507 0 0 1 11.186 0Z" />
-                                </svg>
-                                <span class="font-medium">Favoritos</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg transition">
+                            <a href="metodosPagos.html" class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg transition">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 8.25h19.5M2.25 9h19.5m-16.5 5.25h6m-6 2.25h3m-3.75 3h15a2.25 2.25 0 0 0 2.25-2.25V6.75A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25v10.5A2.25 2.25 0 0 0 4.5 19.5Z" />
                                 </svg>
-                                <span class="font-medium">Métodos de pago</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="config.html" class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg transition">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.325.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 0 1 1.37.49l1.296 2.247a1.125 1.125 0 0 1-.26 1.431l-1.003.827c-.293.241-.438.613-.43.992a7.723 7.723 0 0 1 0 .255c-.008.378.137.75.43.991l1.004.827c.424.35.534.955.26 1.43l-1.298 2.247a1.125 1.125 0 0 1-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.47 6.47 0 0 1-.22.128c-.331.183-.581.495-.644.869l-.213 1.281c-.09.543-.56.94-1.11.94h-2.594c-.55 0-1.019-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 0 1-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 0 1-1.369-.49l-1.297-2.247a1.125 1.125 0 0 1 .26-1.431l1.004-.827c.292-.24.437-.613.43-.991a6.932 6.932 0 0 1 0-.255c.007-.38-.138-.751-.43-.992l-1.004-.827a1.125 1.125 0 0 1-.26-1.43l1.297-2.247a1.125 1.125 0 0 1 1.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.086.22-.128.332-.183.582-.495.644-.869l.214-1.28Z" />
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                                </svg>
-                                <span class="font-medium">Configuración</span>
+                                <span class="font-medium">Métodos de Pago</span>
                             </a>
                         </li>
                         <li class="pt-4 border-t border-gray-200">
-                            <a href="#" class="flex items-center gap-3 p-3 hover:bg-red-50 rounded-lg transition text-red-600">
+                            <a id="cerrarSesionPerfil" href="index.html" class="flex items-center gap-3 p-3 hover:bg-red-50 rounded-lg transition text-red-600">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                                 </svg>
@@ -345,8 +320,8 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="bg-white py-10 px-6 md:px-20">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+     <footer id=footer2 class="bg-white py-10 px-4 md:px-20">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-10 mx-auto max-w-7xl px-4">
             <div>
                 <h2 class="text-2xl font-bold mb-3 font-family-base">Farmacia Luz</h2>
                 <p class="text-sm text-black">
@@ -357,10 +332,11 @@
                 <h3 class="text-lg font-semibold mb-3 font-family-base">Secciones</h3>
                 <ul class="space-y-2 text-sm">
                     <li><a href="index.html" class="hover:text-[#12b1be] transition-colors">Inicio</a></li>
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Dermocosmética</a></li>
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Perfumería</a></li>
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Bebés</a></li>
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Contacto</a></li>
+                    <li><a href="paginas/perfumes.html" class="hover:text-[#12b1be] transition-colors">Perfumes</a></li>
+                    <li><a href="paginas/cuidado-personal.html" class="hover:text-[#12b1be] transition-colors">Cuidado Personal</a></li>
+                    <li><a href="paginas/dermocomestica.html" class="hover:text-[#12b1be] transition-colors">Dermocosmética</a></li>
+                    <li><a href="paginas/medicamentos.html" class="hover:text-[#12b1be] transition-colors">Medicamentos</a></li>
+                    <li><a href="paginas/bebes.html" class="hover:text-[#12b1be] transition-colors">Bebés</a></li>
                 </ul>
             </div>
             <div>
